uidir = $(pkgdatadir)/ui

dist_ui_DATA = \
    active-configuration-setter-dialog.xml \
    build-log-view.xml \
    configuration-creator-dialog.xml \
    configuration-management-window.xml \
    file-recovery-bar.xml \
    project-creator-dialog.xml \
    project-file-creator-dialog.xml \
    session-chooser-dialog.xml \
    session-management-window.xml
