uidir = $(pkgdatadir)/ui

dist_ui_DATA = \
    active-configuration-setter-dialog.xml \
    build-log-view.xml \
    configuration-management-window.xml \
    file-recovery-bar.xml \
    project-creator-dialog.xml \
    session-creator-dialog.xml \
    session-management-window.xml \
    session-restorer-dialog.xml
