noinst_LTLIBRARIES = libbuildsystem.la

libbuildsystem_la_SOURCES = \
    build-log-view.cpp \
    build-log-view-group.cpp \
    build-system.cpp \
    build-systems-extension-point.cpp \
    builder.cpp \
    compilation-options-collector.cpp \
    configuration.cpp \
    build-log-view.hpp \
    build-log-view-group.hpp \
    build-system.hpp \
    build-system-extension.hpp \
    build-system-file.hpp \
    build-systems-extension-point.hpp \
    builder.hpp \
    compilation-options-collector.hpp \
    configuration.hpp

libbuildsystem_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libbuildsystem_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
