noinst_LTLIBRARIES = libbuildsystem.la

libbuildsystem_la_SOURCES = \
    active-configuration-setter-dialog.cpp \
    build-log-view.cpp \
    build-log-view-group.cpp \
    build-system.cpp \
    build-systems-extension-point.cpp \
    builder.cpp \
    configuration.cpp \
    configuration-creator-dialog.cpp \
    configuration-management-window.cpp \
    active-configuration-setter-dialog.hpp \
    build-log-view.hpp \
    build-log-view-group.hpp \
    build-system.hpp \
    build-system-extension.hpp \
    build-system-file.hpp \
    build-systems-extension-point.hpp \
    builder.hpp \
    configuration.hpp \
    configuration-creator-dialog.hpp \
    configuration-management-window.hpp

libbuildsystem_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libbuildsystem_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
