noinst_LTLIBRARIES = libplugin.la

libplugin_la_SOURCES = \
    extension.cpp \
    extension-point-manager.cpp \
    plugin.cpp \
    plugin-manager.cpp \
    extension.hpp \
    extension-point.hpp \
    extension-point-manager.hpp \
    plugin.hpp \
    plugin-manager.hpp

libplugin_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libplugin_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
