noinst_LTLIBRARIES = libproject.la

libproject_la_SOURCES = \
    project.cpp \
    project-creator-dialog.cpp \
    project-db.cpp \
    project-file.cpp \
    project.hpp \
    project-creator-dialog.hpp \
    project-db.hpp \
    project-file.hpp

libproject_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libproject_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
