noinst_LTLIBRARIES = libproject.la

libproject_la_SOURCES = \
    project.cpp \
    project-creator-dialog.cpp \
    project-db.cpp \
    project-explorer.cpp \
    project-file.cpp \
    project-file-creator-dialog.cpp \
    project.hpp \
    project-creator-dialog.hpp \
    project-db.hpp \
    project-explorer.hpp \
    project-file.hpp \
    project-file-creator-dialog.hpp

libproject_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libproject_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
