noinst_LTLIBRARIES = libutilities.la

libutilities_la_SOURCES = \
    lock-file.cpp \
    miscellaneous.cpp \
    process.cpp \
    property-tree.cpp \
    raw-file-loader.cpp \
    signal.cpp \
    text-file-loader.cpp \
    text-file-saver.cpp \
    utf8.cpp \
    worker.cpp \
    file-loader.hpp \
    file-saver.hpp \
    lock-file.hpp \
    miscellaneous.hpp \
    process.hpp \
    property-tree.hpp \
    raw-file-loader.hpp \
    scheduler.hpp \
    signal.hpp \
    text-file-loader.hpp \
    text-file-saver.hpp \
    utf8.hpp \
    worker.hpp

libutilities_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libutilities_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
