noinst_LTLIBRARIES = libwindow.la

libwindow_la_SOURCES = \
    actions.cpp \
    actions-extension-point.cpp \
    splash-screen.cpp \
    views-extension-point.cpp \
    window.cpp \
    action-extension.hpp \
    actions.hpp \
    actions-extension-point.hpp \
    splash-screen.hpp \
    views-extension-point.hpp \
    window.hpp

libwindow_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libwindow_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
