noinst_LTLIBRARIES = libbuildsystem.la

libbuildsystem_la_SOURCES = \
    build-systems-extension-point.cpp \
    build-system.hpp \
    build-system-extension.hpp \
    build-systems-extension-point.hpp

libbuildsystem_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libbuildsystem_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
