noinst_LTLIBRARIES = libeditors.la

libeditors_la_SOURCES = \
    editor.cpp \
    file.cpp \
    file-observer.cpp \
    file-observers-extension-point.cpp \
    file-recoverers-extension-point.cpp \
    source-editor.cpp \
    source-file.cpp \
    text-editor.cpp \
    text-file.cpp \
    editor.hpp \
    file.hpp \
    file-observer.hpp \
    file-observer-extension.hpp \
    file-observers-extension-point.hpp \
    file-recoverer-extension.hpp \
    file-recoverers-extension-point.hpp \
    source-editor.hpp \
    source-file.hpp \
    text-editor.hpp \
    text-file.hpp

libeditors_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libeditors_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
