noinst_LTLIBRARIES = libresources.la

libresources_la_SOURCES = \
    file-source.cpp \
    project-ast-manager.cpp \
    project-ast.cpp \
    file-ast-collection.hpp \
    file-ast.hpp \
    file-source.hpp \
    project-ast-manager.hpp \
    project-ast.hpp \
    project-configuration.hpp

libresources_la_CPPFLAGS = \
    $(BOOST_CPPFLAGS) \
    $(GTK_CFLAGS)
