noinst_LTLIBRARIES = libresources.la

libresources_la_SOURCES = \
    file-source.cpp \
    project-persistent-ast.cpp \
    file-ast.hpp \
    file-source.hpp \
    project-configuration.hpp \
    project-persistent-ast.hpp

libresources_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libresources_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
