noinst_LTLIBRARIES = libsession.la

libsession_la_SOURCES = \
    file-recovery-bar.cpp \
    histories-extension-point.cpp \
    preferences-editor.cpp \
    preferences-extension-point.cpp \
    session.cpp \
    session-chooser-dialog.cpp \
    session-management-window.cpp \
    file-recovery-bar.hpp \
    histories-extension.hpp \
    histories-extension-point.hpp \
    preferences-editor.hpp \
    preferences-extension.hpp \
    preferences-extension-point.hpp \
    session.hpp \
    session-chooser-dialog.hpp \
    session-management-window.hpp

libsession_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libsession_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
