SUBDIRS = bars dialogs

noinst_LTLIBRARIES = libui.la

libui_la_SOURCES = \
    actions.cpp \
    actions-extension-point.cpp \
    bar.cpp \
    editor.cpp \
    file.cpp \
    notebook.cpp \
    paned.cpp \
    preferences.cpp \
    project.cpp \
    session.cpp \
    source-editor.cpp \
    source-file.cpp \
    splash-screen.cpp \
    text-editor.cpp \
    text-file.cpp \
    views-extension-point.cpp \
    widget.cpp \
    widget-container.cpp \
    widget-with-bars.cpp \
    window.cpp \
    actions.hpp \
    actions-extension-point.hpp \
    bar.hpp \
    editor.hpp \
    file.hpp \
    notebook.hpp \
    paned.hpp \
    preferences.hpp \
    project.hpp \
    session.hpp \
    source-editor.hpp \
    source-file.hpp \
    splash-screen.hpp \
    text-editor.hpp \
    text-file.hpp \
    view-extension.hpp \
    views-extension-point.hpp \
    widget.hpp \
    widget-container.hpp \
    widget-with-bars.hpp \
    window.hpp

libui_la_CPPFLAGS = \
    $(BOOST_CPPFLAGS) \
    $(GTK_CFLAGS) \
    $(XML_CFLAGS)

libui_la_CXXFLAGS = -Werror -Wall
