SUBDIRS = bars dialogs

noinst_LTLIBRARIES = libui.la

libui_la_SOURCES = \
    actions.cpp \
    actions-extension-point.cpp \
    editor.cpp \
    file.cpp \
    file-observer.cpp \
    file-observers-extension-point.cpp \
    notebook.cpp \
    paned.cpp \
    project.cpp \
    session.cpp \
    source-editor.cpp \
    source-file.cpp \
    splash-screen.cpp \
    text-editor.cpp \
    text-file.cpp \
    view.cpp \
    views-extension-point.cpp \
    widget.cpp \
    widget-container.cpp \
    widget-with-bars.cpp \
    window.cpp \
    action-extension.hpp \
    actions.hpp \
    actions-extension-point.hpp \
    bar.hpp \
    editor.hpp \
    file.hpp \
    file-observer.hpp \
    file-observer-extension.hpp \
    file-observers-extension-point.hpp \
    notebook.hpp \
    paned.hpp \
    project.hpp \
    session.hpp \
    source-editor.hpp \
    source-file.hpp \
    splash-screen.hpp \
    text-editor.hpp \
    text-file.hpp \
    view.hpp \
    view-extension.hpp \
    views-extension-point.hpp \
    widget.hpp \
    widget-container.hpp \
    widget-with-bars.hpp \
    window.hpp

libui_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libui_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
