SUBDIRS = bars dialogs windows

noinst_LTLIBRARIES = libui.la

libui_la_SOURCES = \
    actions.cpp \
    actions-extension-point.cpp \
    editor.cpp \
    file.cpp \
    file-observer.cpp \
    file-observers-extension-point.cpp \
    file-recoverers-extension-point.cpp \
    histories-extension-point.cpp \
    notebook.cpp \
    paned.cpp \
    preferences-extension-point.cpp \
    project.cpp \
    session.cpp \
    source-editor.cpp \
    source-file.cpp \
    splash-screen.cpp \
    text-editor.cpp \
    text-file.cpp \
    view.cpp \
    views-extension-point.cpp \
    widget.cpp \
    widget-container.cpp \
    widget-with-bars.cpp \
    window.cpp \
    action-extension.hpp \
    actions.hpp \
    actions-extension-point.hpp \
    bar.hpp \
    editor.hpp \
    file.hpp \
    file-observer.hpp \
    file-observer-extension.hpp \
    file-observers-extension-point.hpp \
    file-recoverer-extension.hpp \
    file-recoverers-extension-point.hpp \
    histories-extension.hpp \
    histories-extension-point.hpp \
    notebook.hpp \
    paned.hpp \
    preferences-extension.hpp \
    preferences-extension-point.hpp \
    project.hpp \
    session.hpp \
    source-editor.hpp \
    source-file.hpp \
    splash-screen.hpp \
    text-editor.hpp \
    text-file.hpp \
    view.hpp \
    view-extension.hpp \
    views-extension-point.hpp \
    widget.hpp \
    widget-container.hpp \
    widget-with-bars.hpp \
    window.hpp

libui_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libui_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
