noinst_LTLIBRARIES = libutilities.la

libutilities_la_SOURCES = \
    lock-file.cpp \
    misc.cpp \
    revision.cpp \
    signal.cpp \
    text-file-loader.cpp \
    text-file-saver.cpp \
    utf8.cpp \
    worker.cpp \
    buffer.hpp \
    change-hint.hpp \
    file-loader.hpp \
    file-saver.hpp \
    lock-file.hpp \
    managed.hpp \
    manager.hpp \
    misc.hpp \
    range.hpp \
    revision.hpp \
    scheduler.hpp \
    signal.hpp \
    text-buffer.hpp \
    text-file-loader.hpp \
    text-file-saver.hpp \
    utf8.hpp \
    worker.hpp

libutilities_la_CPPFLAGS = \
    $(BOOST_CPPFLAGS) \
    $(GTK_CFLAGS)

libutilities_la_CXXFLAGS = -Werror -Wall
