noinst_LTLIBRARIES = libutilities.la

libutilities_la_SOURCES = \
    extension-point-manager.cpp \
    lock-file.cpp \
    miscellaneous.cpp \
    plugin.cpp \
    plugin-manager.cpp \
    revision.cpp \
    signal.cpp \
    text-buffer.cpp \
    text-file-loader.cpp \
    text-file-saver.cpp \
    utf8.cpp \
    worker.cpp \
    buffer.hpp \
    change-hint.hpp \
    extension.hpp \
    extension-point.hpp \
    extension-point-manager.hpp \
    file-loader.hpp \
    file-saver.hpp \
    lock-file.hpp \
    managed.hpp \
    manager.hpp \
    miscellaneous.hpp \
    plugin.hpp \
    plugin-manager.hpp \
    range.hpp \
    revision.hpp \
    scheduler.hpp \
    signal.hpp \
    text-buffer.hpp \
    text-file-loader.hpp \
    text-file-saver.hpp \
    utf8.hpp \
    worker.hpp

libutilities_la_CPPFLAGS = \
    $(BOOST_CPPFLAGS) \
    $(GTK_CFLAGS) \
    $(GMODULE_CFLAGS) \
    $(XML_CFLAGS)

libutilities_la_CXXFLAGS = -Werror -Wall
