noinst_LTLIBRARIES = libutilities.la

libutilities_la_SOURCES = \
    extension.cpp \
    extension-point-manager.cpp \
    lock-file.cpp \
    miscellaneous.cpp \
    plugin.cpp \
    plugin-manager.cpp \
    property-tree.cpp \
    signal.cpp \
    text-buffer.cpp \
    text-file-loader.cpp \
    text-file-saver.cpp \
    utf8.cpp \
    worker.cpp \
    buffer.hpp \
    extension.hpp \
    extension-point.hpp \
    extension-point-manager.hpp \
    file-loader.hpp \
    file-saver.hpp \
    lock-file.hpp \
    miscellaneous.hpp \
    plugin.hpp \
    plugin-manager.hpp \
    property-tree.hpp \
    scheduler.hpp \
    signal.hpp \
    text-buffer.hpp \
    text-file-loader.hpp \
    text-file-saver.hpp \
    utf8.hpp \
    worker.hpp

libutilities_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libutilities_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
