noinst_LTLIBRARIES = libwidget.la

libwidget_la_SOURCES = \
    notebook.cpp \
    paned.cpp \
    view.cpp \
    widget.cpp \
    widget-container.cpp \
    widget-with-bars.cpp \
    bar.hpp \
    notebook.hpp \
    paned.hpp \
    view.hpp \
    view-extension.hpp \
    widget.hpp \
    widget-container.hpp \
    widget-with-bars.hpp

libwidget_la_CPPFLAGS = $(SAMOYED_CPPFLAGS)

libwidget_la_CXXFLAGS = $(SAMOYED_CXXFLAGS)
